tests/snapshots/files__loop_pass_through-rvsdg-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
@main(v0: int) {
  v3: int = const 1;
  v6: int = id v3;
  v7: int = id v0;
  jmp .__9__;
.__9__:
  v12: int = add v6 v6;
  v16: int = const 10;
  v18: bool = lt v6 v16;
  v6: int = id v12;
  v7: int = id v7;
  br v18 .__9__ .__22__;
.__22__:
  v24: int = add v6 v0;
  print v24;
}

