tests/snapshots/files__loop_pass_through-structured.snap
---
source: tests/files.rs
expression: visualization.result
---
main {
block:
 i: int = const 1;
while true:
 block:
  max: int = const 10;
  cond: bool = lt i max;
  i: int = add i i;
  if cond:
   break 2
  else:

 block:
  res: int = add i input;
  print res;
  return

}
