tests/snapshots/files__loop_peeling-optimize-no-ctx.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 5
@main(v0: int) {
  c1_: int = const 0;
  v2_: bool = lt c1_ v0;
  v3_: int = id c1_;
  v4_: int = id c1_;
  v5_: int = id v0;
  br v2_ .b6_ .b7_;
.b6_:
  v8_: int = id c1_;
  v9_: int = id c1_;
  v10_: int = id v0;
.b11_:
  c12_: int = const 5;
  v13_: int = add c12_ v8_;
  c14_: int = const 1;
  v15_: int = add c14_ v9_;
  v16_: bool = lt v15_ v10_;
  v8_: int = id v13_;
  v9_: int = id v15_;
  v17_: int = id v10_;
  v10_: int = id v17_;
  br v16_ .b11_ .b18_;
.b18_:
  v3_: int = id v8_;
  v4_: int = id v9_;
  v5_: int = id v10_;
  print v3_;
  ret;
  jmp .b19_;
.b7_:
  print v3_;
  ret;
.b19_:
}
