tests/snapshots/files__loop_strength_reduction-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 
@main {
  c0_: int = const 0;
  c1_: int = const 1;
  c2_: int = const 5;
  c3_: int = const 300;
  v4_: int = id c0_;
  v5_: int = id c1_;
  v6_: int = id c0_;
  v7_: int = id c2_;
  v8_: int = id c3_;
  v9_: int = id c0_;
.b10_:
  v11_: int = add v7_ v9_;
  v12_: int = add v11_ v7_;
  v13_: int = add v12_ v7_;
  print v9_;
  print v11_;
  print v12_;
  print v13_;
  v14_: int = add v4_ v5_;
  v15_: int = add v14_ v5_;
  v16_: int = add v15_ v5_;
  v17_: int = add v16_ v5_;
  v18_: int = add v5_ v6_;
  v19_: int = add v18_ v5_;
  v20_: int = add v19_ v5_;
  v21_: int = add v20_ v5_;
  v22_: int = add v13_ v7_;
  v23_: bool = lt v17_ v8_;
  v4_: int = id v17_;
  v24_: int = id v5_;
  v6_: int = id v21_;
  v25_: int = id v7_;
  v26_: int = id v8_;
  v9_: int = id v22_;
  v5_: int = id v24_;
  v7_: int = id v25_;
  v8_: int = id v26_;
  br v23_ .b10_ .b27_;
.b27_:
  ret;
}
