tests/snapshots/files__loop_with_mul_by_inv-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 4
@main(v0: int) {
  c1_: int = const 0;
  c2_: int = const 5;
  v3_: int = id c1_;
  v4_: int = id c1_;
  v5_: int = id c2_;
  v6_: int = id v0;
.b7_:
  v8_: int = mul v4_ v5_;
  v9_: int = add v3_ v8_;
  c10_: int = const 1;
  v11_: int = add c10_ v4_;
  v12_: bool = lt v4_ v6_;
  v3_: int = id v9_;
  v4_: int = id v11_;
  v13_: int = id v5_;
  v14_: int = id v6_;
  v5_: int = id v13_;
  v6_: int = id v14_;
  br v12_ .b7_ .b15_;
.b15_:
  print v3_;
  ret;
}
